--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -9,13 +9,15 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
       MONGO_INITDB_DATABASE: the_database
-      REDIS_URL: redis://redis:6379
     volumes: 
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_data:/data/db
       
   redis:
     image: redis
+    command: ['redis-server', '--appendonly', 'yes']
+    ports:
+      - 6379:6379
       
 volumes:
   mongo_data:
