--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -1,6 +1,21 @@
 version: '3.8'
 
 services:
+  app:
+    image: back-dev
+    build:
+      context: . # The context will pick this directory as the "build context"
+      dockerfile: dev.Dockerfile # This will simply tell which dockerfile to read
+    ports:
+      - 3001:3001
+    depends_on:
+      - "mongo"
+      - "redis"
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+    container_name: back-dev 
+
   mongo:
     image: mongo
     ports:
