--- a/todo-app/todo-frontend/docker-compose.dev.yml
+++ b/todo-app/todo-frontend/docker-compose.dev.yml
@@ -7,5 +7,8 @@ services:
     volumes:
       - ./:/usr/src/app # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
     ports:
-      - 3001:3000
+      - 3210:3000
     container_name: front-dev # This will name the container front-dev
+
+  debug-helper:
+    image: busybox
