Start 12.17. - 12.19. Broken. Took 2h

--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,5 +1,5 @@
 # The first FROM is now a stage called build-stage
-FROM node:16 AS build-stage
+FROM node:16 AS test-stage
 
 WORKDIR /usr/src/app
 
@@ -12,14 +12,23 @@ RUN CI=true npm test
 RUN npm run build
 
 
+FROM test-stage AS build-stage
+
 # This is a new stage, everything before this is gone, except the files we want to COPY
-FROM nginx:1.20-alpine
+#FROM nginx:1.20-alpine
+#
 
-ENV REACT_APP_BACKEND_URL=//localhost:3000
+WORKDIR /usr/src/app
 
-# COPY the directory build from build-stage to /usr/share/nginx/html
-# The target location here was found from the docker hub page
-COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+COPY . .
+
+RUN npm ci
+
+ENV REACT_APP_BACKEND_URL=//localhost:3001
+#
+## COPY the directory build from build-stage to /usr/share/nginx/html
+## The target location here was found from the docker hub page
+#COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
 
 
 #FROM test-stage AS build-stage
@@ -32,8 +41,8 @@ COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
 #
 #ENV REACT_APP_BACKEND_URL=//localhost:3000
 #
-#RUN npm run build
-#
-#RUN npm install -g serve
-#
-#CMD ["serve", "-s", "build", "-p", "3000"]
+RUN npm run build
+
+RUN npm install -g serve
+
+CMD ["serve", "-s", "build", "-p", "3000"]
